feat: Implement Charater level RNN
Develop definition for get_batches function.

--- a/recurrent-neural-networks/char-rnn/Character_Level_RNN_Exercise.ipynb
+++ b/recurrent-neural-networks/char-rnn/Character_Level_RNN_Exercise.ipynb
@@ -22,10 +22,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 145,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.core.interactiveshell import InteractiveShell\n",
+    "InteractiveShell.ast_node_interactivity = 'all'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import math"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -45,10 +62,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 148,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# open text file and read in data as `text`\n",
@@ -65,11 +80,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 149,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Chapter 1\\n\\n\\nHappy families are all alike; every unhappy family is unhappy in its own\\nway.\\n\\nEverythin'"
+      ]
+     },
+     "execution_count": 149,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "text[:100]"
    ]
@@ -85,23 +109,129 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 150,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'u': 0,\n",
+       " 'h': 1,\n",
+       " \"'\": 2,\n",
+       " '&': 3,\n",
+       " '8': 4,\n",
+       " 'D': 5,\n",
+       " '@': 6,\n",
+       " 'W': 7,\n",
+       " 'r': 8,\n",
+       " 'R': 9,\n",
+       " '0': 10,\n",
+       " '3': 11,\n",
+       " ')': 12,\n",
+       " 'y': 13,\n",
+       " 'T': 14,\n",
+       " 'b': 15,\n",
+       " 'm': 16,\n",
+       " 'O': 17,\n",
+       " '*': 18,\n",
+       " 'S': 19,\n",
+       " '!': 20,\n",
+       " 'q': 21,\n",
+       " 'p': 22,\n",
+       " 'k': 23,\n",
+       " 'n': 24,\n",
+       " '.': 25,\n",
+       " 'F': 26,\n",
+       " 'j': 27,\n",
+       " '7': 28,\n",
+       " ':': 29,\n",
+       " 'g': 30,\n",
+       " 'c': 31,\n",
+       " 'J': 32,\n",
+       " '$': 33,\n",
+       " '?': 34,\n",
+       " 'o': 35,\n",
+       " 's': 36,\n",
+       " 'Z': 37,\n",
+       " '_': 38,\n",
+       " 'E': 39,\n",
+       " '`': 40,\n",
+       " 'A': 41,\n",
+       " 'M': 42,\n",
+       " 'l': 43,\n",
+       " 'e': 44,\n",
+       " 'G': 45,\n",
+       " '5': 46,\n",
+       " 'U': 47,\n",
+       " '/': 48,\n",
+       " '%': 49,\n",
+       " '9': 50,\n",
+       " 'a': 51,\n",
+       " '\\n': 52,\n",
+       " '6': 53,\n",
+       " '4': 54,\n",
+       " ',': 55,\n",
+       " '-': 56,\n",
+       " '1': 57,\n",
+       " 'v': 58,\n",
+       " '\"': 59,\n",
+       " 'w': 60,\n",
+       " ';': 61,\n",
+       " 'i': 62,\n",
+       " 'I': 63,\n",
+       " '2': 64,\n",
+       " 'Q': 65,\n",
+       " 'X': 66,\n",
+       " 'd': 67,\n",
+       " 'B': 68,\n",
+       " 't': 69,\n",
+       " 'f': 70,\n",
+       " 'V': 71,\n",
+       " ' ': 72,\n",
+       " '(': 73,\n",
+       " 'L': 74,\n",
+       " 'K': 75,\n",
+       " 'Y': 76,\n",
+       " 'N': 77,\n",
+       " 'P': 78,\n",
+       " 'x': 79,\n",
+       " 'H': 80,\n",
+       " 'z': 81,\n",
+       " 'C': 82}"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(1985223,)"
+      ]
+     },
+     "execution_count": 150,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# encode the text and map each character to an integer and vice versa\n",
     "\n",
     "# we create two dictionaries:\n",
     "# 1. int2char, which maps integers to characters\n",
     "# 2. char2int, which maps characters to unique integers\n",
+    "\n",
     "chars = tuple(set(text))\n",
+    "\n",
     "int2char = dict(enumerate(chars))\n",
+    "\n",
     "char2int = {ch: ii for ii, ch in int2char.items()}\n",
+    "char2int\n",
     "\n",
     "# encode the text\n",
-    "encoded = np.array([char2int[ch] for ch in text])"
+    "encoded = np.array([char2int[ch] for ch in text])\n",
+    "encoded.shape"
    ]
   },
   {
@@ -113,11 +243,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([82,  1, 51, 22, 69, 44,  8, 72, 57, 52, 52, 52, 80, 51, 22, 22, 13,\n",
+       "       72, 70, 51, 16, 62, 43, 62, 44, 36, 72, 51,  8, 44, 72, 51, 43, 43,\n",
+       "       72, 51, 43, 62, 23, 44, 61, 72, 44, 58, 44,  8, 13, 72,  0, 24,  1,\n",
+       "       51, 22, 22, 13, 72, 70, 51, 16, 62, 43, 13, 72, 62, 36, 72,  0, 24,\n",
+       "        1, 51, 22, 22, 13, 72, 62, 24, 72, 62, 69, 36, 72, 35, 60, 24, 52,\n",
+       "       60, 51, 13, 25, 52, 52, 39, 58, 44,  8, 13, 69,  1, 62, 24])"
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "encoded[:100]"
    ]
@@ -133,10 +277,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 152,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def one_hot_encode(arr, n_labels):\n",
@@ -155,11 +297,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, 0, 0, 0, 0, 5],\n",
+       "       [0, 5, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 5, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 5, 0, 0, 0, 0, 0, 0],\n",
+       "       [0, 5, 0, 0, 0, 0, 0, 0]], dtype=int8)"
+      ]
+     },
+     "execution_count": 153,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr1 = np.zeros((5, 8), dtype = np.int8)\n",
+    "arr1[[0, 1, 2, 3, 4], [7, 1, 1, 1, 1]] = 5\n",
+    "arr1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0. 0. 0. 1. 0. 0. 0. 0.]\n",
+      "  [0. 0. 0. 0. 0. 1. 0. 0.]\n",
+      "  [0. 1. 0. 0. 0. 0. 0. 0.]]]\n"
+     ]
+    }
+   ],
    "source": [
     "# check that the function works as expected\n",
     "test_seq = np.array([[3, 5, 1]])\n",
@@ -167,6 +343,13 @@
     "\n",
     "print(one_hot)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -203,10 +386,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 155,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def get_batches(arr, batch_size, seq_length):\n",
@@ -221,21 +402,79 @@
     "    '''\n",
     "    \n",
     "    ## TODO: Get the number of batches we can make\n",
-    "    n_batches = \n",
+    "    characters_in_one_batch = batch_size * seq_length\n",
+    "    n_batches = int(arr.shape[0]/ characters_in_one_batch)\n",
     "    \n",
     "    ## TODO: Keep only enough characters to make full batches\n",
-    "    arr = \n",
+    "    updated_arr_length = characters_in_one_batch * n_batches\n",
+    "    arr = arr[:updated_arr_length]\n",
     "    \n",
     "    ## TODO: Reshape into batch_size rows\n",
-    "    arr = \n",
-    "    \n",
+    "    arr = arr.reshape(n_batches, -1)\n",
+    "    print(arr.shape)\n",
     "    ## TODO: Iterate over the batches using a window of size seq_length\n",
     "    for n in range(0, arr.shape[1], seq_length):\n",
     "        # The features\n",
-    "        x = \n",
+    "        x = arr[:, n:n + seq_length]\n",
+    "        \n",
     "        # The targets, shifted by one\n",
-    "        y = \n",
+    "        y = np.ones_like(x)\n",
+    "\n",
+    "        y[:, :-1] = x[:, 1:]\n",
+    "        y[:, -1] = x[:, 0]\n",
+    "\n",
     "        yield x, y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 168,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1,  2,  3,  4,  5],\n",
+       "       [ 6,  7,  8,  9, 10],\n",
+       "       [11, 12, 13, 14, 15]])"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2,  3,  4,  5,  1],\n",
+       "       [ 7,  8,  9, 10,  6],\n",
+       "       [12, 13, 14, 15, 11]])"
+      ]
+     },
+     "execution_count": 168,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matrix_a = np.arange(1, 15 + 1, 1)\n",
+    "matrix_a = matrix_a.reshape((3, 5))\n",
+    "matrix_a\n",
+    "\n",
+    "matrix_b = np.ones_like(matrix_a)\n",
+    "type(ans_a)[:, :-1] = matrix_a[:, 1:]\n",
+    "ans_a[:, -1] = matrix_a[:, 0]\n",
+    "ans_a"
    ]
   },
   {
@@ -249,23 +488,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(4963, 400)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(4963, 50)"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(4963, 50)"
+      ]
+     },
+     "execution_count": 156,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "batches = get_batches(encoded, 8, 50)\n",
-    "x, y = next(batches)"
+    "x, y = next(batches)\n",
+    "x.shape\n",
+    "y.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 157,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x\n",
+      " [[82  1 51 22 69 44  8 72 57 52]\n",
+      " [72 24 35 60 72 43 51 36 69 44]\n",
+      " [36 25 72 14  1 44 72 60 62 70]\n",
+      " [ 0 51  8  8 44 43 55 72 78  8]\n",
+      " [ 8 72 36 62 67 44 72 51 24 67]\n",
+      " [72 69 44 36 35  8 35 38 56 56]\n",
+      " [72 41 24 67 72 24 35 69 62 31]\n",
+      " [30 35 60 24 72 51 43 60 51 13]\n",
+      " [35  8 36 69 72 35 70 72 51 43]\n",
+      " [ 0 69 44 72 60  1 44 24 55 72]]\n",
+      "\n",
+      "y\n",
+      " [[ 1 51 22 69 44  8 72 57 52 52]\n",
+      " [24 35 60 72 43 51 36 69 44 67]\n",
+      " [25 72 14  1 44 72 60 62 70 44]\n",
+      " [51  8  8 44 43 55 72 78  8 62]\n",
+      " [72 36 62 67 44 72 51 24 67 72]\n",
+      " [69 44 36 35  8 35 38 56 56 24]\n",
+      " [41 24 67 72 24 35 69 62 31 62]\n",
+      " [35 60 24 72 51 43 60 51 13 36]\n",
+      " [ 8 36 69 72 35 70 72 51 43 43]\n",
+      " [69 44 72 60  1 44 24 55 72 35]]\n"
+     ]
+    }
+   ],
    "source": [
     "# printing out the first 10 items in a sequence\n",
     "print('x\\n', x[:10, :10])\n",
@@ -357,9 +652,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# check if GPU is available\n",
@@ -373,9 +666,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "class CharRNN(nn.Module):\n",
@@ -441,9 +732,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def train(net, data, epochs=10, batch_size=10, seq_length=50, lr=0.001, clip=5, val_frac=0.1, print_every=10):\n",
@@ -552,9 +841,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## TODO: set you model hyperparameters\n",
@@ -577,7 +864,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -661,9 +947,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# change the name, for saving multiple files\n",
@@ -701,9 +985,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def predict(net, char, h=None, top_k=None):\n",
@@ -756,9 +1038,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def sample(net, size, prime='The', top_k=None):\n",
@@ -789,9 +1069,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "print(sample(net, 1000, prime='Anna', top_k=5))"
@@ -807,9 +1085,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Here we have loaded in a model that trained over 20 epochs `rnn_20_epoch.net`\n",
@@ -823,9 +1099,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Sample using a loaded model\n",
@@ -835,9 +1109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
