--- a/recurrent-neural-networks/char-rnn/Character_Level_RNN_Solution.ipynb
+++ b/recurrent-neural-networks/char-rnn/Character_Level_RNN_Solution.ipynb
@@ -1276,7 +1276,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1290,7 +1290,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
