--- a/recurrent-neural-networks/char-rnn/Character_Level_RNN_Exercise.ipynb
+++ b/recurrent-neural-networks/char-rnn/Character_Level_RNN_Exercise.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
        "'Chapter 1\\n\\n\\nHappy families are all alike; every unhappy family is unhappy in its own\\nway.\\n\\nEverythin'"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,98 +109,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'u': 0,\n",
-       " 'h': 1,\n",
-       " \"'\": 2,\n",
-       " '&': 3,\n",
-       " '8': 4,\n",
-       " 'D': 5,\n",
-       " '@': 6,\n",
-       " 'W': 7,\n",
-       " 'r': 8,\n",
-       " 'R': 9,\n",
-       " '0': 10,\n",
-       " '3': 11,\n",
-       " ')': 12,\n",
+       "{';': 0,\n",
+       " 'O': 1,\n",
+       " 'j': 2,\n",
+       " 'd': 3,\n",
+       " '@': 4,\n",
+       " '3': 5,\n",
+       " '\"': 6,\n",
+       " 'L': 7,\n",
+       " 'M': 8,\n",
+       " 'e': 9,\n",
+       " '.': 10,\n",
+       " 'f': 11,\n",
+       " 'q': 12,\n",
        " 'y': 13,\n",
-       " 'T': 14,\n",
-       " 'b': 15,\n",
-       " 'm': 16,\n",
-       " 'O': 17,\n",
-       " '*': 18,\n",
-       " 'S': 19,\n",
-       " '!': 20,\n",
-       " 'q': 21,\n",
-       " 'p': 22,\n",
-       " 'k': 23,\n",
-       " 'n': 24,\n",
-       " '.': 25,\n",
-       " 'F': 26,\n",
-       " 'j': 27,\n",
-       " '7': 28,\n",
-       " ':': 29,\n",
-       " 'g': 30,\n",
-       " 'c': 31,\n",
-       " 'J': 32,\n",
-       " '$': 33,\n",
-       " '?': 34,\n",
-       " 'o': 35,\n",
-       " 's': 36,\n",
-       " 'Z': 37,\n",
-       " '_': 38,\n",
-       " 'E': 39,\n",
-       " '`': 40,\n",
+       " 'w': 14,\n",
+       " 'B': 15,\n",
+       " '$': 16,\n",
+       " 'p': 17,\n",
+       " 'Z': 18,\n",
+       " 's': 19,\n",
+       " '2': 20,\n",
+       " '(': 21,\n",
+       " '8': 22,\n",
+       " '5': 23,\n",
+       " 'X': 24,\n",
+       " 'l': 25,\n",
+       " 'C': 26,\n",
+       " 'D': 27,\n",
+       " 'u': 28,\n",
+       " ')': 29,\n",
+       " 'a': 30,\n",
+       " 'H': 31,\n",
+       " '0': 32,\n",
+       " 'G': 33,\n",
+       " 'J': 34,\n",
+       " '1': 35,\n",
+       " 'P': 36,\n",
+       " '6': 37,\n",
+       " '&': 38,\n",
+       " 'F': 39,\n",
+       " 'r': 40,\n",
        " 'A': 41,\n",
-       " 'M': 42,\n",
-       " 'l': 43,\n",
-       " 'e': 44,\n",
-       " 'G': 45,\n",
-       " '5': 46,\n",
-       " 'U': 47,\n",
-       " '/': 48,\n",
-       " '%': 49,\n",
-       " '9': 50,\n",
-       " 'a': 51,\n",
-       " '\\n': 52,\n",
-       " '6': 53,\n",
-       " '4': 54,\n",
-       " ',': 55,\n",
-       " '-': 56,\n",
-       " '1': 57,\n",
-       " 'v': 58,\n",
-       " '\"': 59,\n",
-       " 'w': 60,\n",
-       " ';': 61,\n",
-       " 'i': 62,\n",
-       " 'I': 63,\n",
-       " '2': 64,\n",
-       " 'Q': 65,\n",
-       " 'X': 66,\n",
-       " 'd': 67,\n",
-       " 'B': 68,\n",
-       " 't': 69,\n",
-       " 'f': 70,\n",
-       " 'V': 71,\n",
-       " ' ': 72,\n",
-       " '(': 73,\n",
-       " 'L': 74,\n",
+       " '%': 42,\n",
+       " ':': 43,\n",
+       " 'h': 44,\n",
+       " '\\n': 45,\n",
+       " 'V': 46,\n",
+       " 'z': 47,\n",
+       " 'Q': 48,\n",
+       " ',': 49,\n",
+       " '*': 50,\n",
+       " 'n': 51,\n",
+       " 'b': 52,\n",
+       " 'T': 53,\n",
+       " 'R': 54,\n",
+       " '7': 55,\n",
+       " 'o': 56,\n",
+       " \"'\": 57,\n",
+       " 'm': 58,\n",
+       " 'N': 59,\n",
+       " '_': 60,\n",
+       " 'U': 61,\n",
+       " 'c': 62,\n",
+       " 't': 63,\n",
+       " ' ': 64,\n",
+       " 'k': 65,\n",
+       " '-': 66,\n",
+       " 'S': 67,\n",
+       " '`': 68,\n",
+       " 'i': 69,\n",
+       " '!': 70,\n",
+       " 'x': 71,\n",
+       " 'g': 72,\n",
+       " 'Y': 73,\n",
+       " 'W': 74,\n",
        " 'K': 75,\n",
-       " 'Y': 76,\n",
-       " 'N': 77,\n",
-       " 'P': 78,\n",
-       " 'x': 79,\n",
-       " 'H': 80,\n",
-       " 'z': 81,\n",
-       " 'C': 82}"
+       " '/': 76,\n",
+       " '4': 77,\n",
+       " '?': 78,\n",
+       " 'v': 79,\n",
+       " '9': 80,\n",
+       " 'E': 81,\n",
+       " 'I': 82}"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -210,7 +210,7 @@
        "(1985223,)"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,21 +243,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([82,  1, 51, 22, 69, 44,  8, 72, 57, 52, 52, 52, 80, 51, 22, 22, 13,\n",
-       "       72, 70, 51, 16, 62, 43, 62, 44, 36, 72, 51,  8, 44, 72, 51, 43, 43,\n",
-       "       72, 51, 43, 62, 23, 44, 61, 72, 44, 58, 44,  8, 13, 72,  0, 24,  1,\n",
-       "       51, 22, 22, 13, 72, 70, 51, 16, 62, 43, 13, 72, 62, 36, 72,  0, 24,\n",
-       "        1, 51, 22, 22, 13, 72, 62, 24, 72, 62, 69, 36, 72, 35, 60, 24, 52,\n",
-       "       60, 51, 13, 25, 52, 52, 39, 58, 44,  8, 13, 69,  1, 62, 24])"
+       "array([26, 44, 30, 17, 63,  9, 40, 64, 35, 45, 45, 45, 31, 30, 17, 17, 13,\n",
+       "       64, 11, 30, 58, 69, 25, 69,  9, 19, 64, 30, 40,  9, 64, 30, 25, 25,\n",
+       "       64, 30, 25, 69, 65,  9,  0, 64,  9, 79,  9, 40, 13, 64, 28, 51, 44,\n",
+       "       30, 17, 17, 13, 64, 11, 30, 58, 69, 25, 13, 64, 69, 19, 64, 28, 51,\n",
+       "       44, 30, 17, 17, 13, 64, 69, 51, 64, 69, 63, 19, 64, 56, 14, 51, 45,\n",
+       "       14, 30, 13, 10, 45, 45, 81, 79,  9, 40, 13, 63, 44, 69, 51])"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
        "       [0, 5, 0, 0, 0, 0, 0, 0]], dtype=int8)"
       ]
      },
-     "execution_count": 153,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +410,7 @@
     "    arr = arr[:updated_arr_length]\n",
     "    \n",
     "    ## TODO: Reshape into batch_size rows\n",
-    "    arr = arr.reshape(n_batches, -1)\n",
+    "    arr = arr.reshape((n_batches, -1))\n",
     "    print(arr.shape)\n",
     "    ## TODO: Iterate over the batches using a window of size seq_length\n",
     "    for n in range(0, arr.shape[1], seq_length):\n",
@@ -419,16 +419,24 @@
     "        \n",
     "        # The targets, shifted by one\n",
     "        y = np.ones_like(x)\n",
-    "\n",
-    "        y[:, :-1] = x[:, 1:]\n",
-    "        y[:, -1] = x[:, 0]\n",
+    "        try:\n",
+    "            y[:, :-1] = x[:, 1:]\n",
+    "        except:\n",
+    "            y[:, -1] = x[:, 0]\n",
     "\n",
     "        yield x, y"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> How to copy an array elements into another array where array elements are shifted by one in resultant array:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -439,17 +447,7 @@
        "       [11, 12, 13, 14, 15]])"
       ]
      },
-     "execution_count": 168,
-     "metadata": {},
-     "output_type": "execute_result"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "numpy.ndarray"
-      ]
-     },
-     "execution_count": 168,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -461,7 +459,7 @@
        "       [12, 13, 14, 15, 11]])"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,9 +470,9 @@
     "matrix_a\n",
     "\n",
     "matrix_b = np.ones_like(matrix_a)\n",
-    "type(ans_a)[:, :-1] = matrix_a[:, 1:]\n",
-    "ans_a[:, -1] = matrix_a[:, 0]\n",
-    "ans_a"
+    "matrix_b[:, :-1] = matrix_a[:, 1:]\n",
+    "matrix_b[:, -1] = matrix_a[:, 0]\n",
+    "matrix_b"
    ]
   },
   {
@@ -488,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +502,7 @@
        "(4963, 50)"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -514,7 +512,7 @@
        "(4963, 50)"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -528,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -536,28 +534,28 @@
      "output_type": "stream",
      "text": [
       "x\n",
-      " [[82  1 51 22 69 44  8 72 57 52]\n",
-      " [72 24 35 60 72 43 51 36 69 44]\n",
-      " [36 25 72 14  1 44 72 60 62 70]\n",
-      " [ 0 51  8  8 44 43 55 72 78  8]\n",
-      " [ 8 72 36 62 67 44 72 51 24 67]\n",
-      " [72 69 44 36 35  8 35 38 56 56]\n",
-      " [72 41 24 67 72 24 35 69 62 31]\n",
-      " [30 35 60 24 72 51 43 60 51 13]\n",
-      " [35  8 36 69 72 35 70 72 51 43]\n",
-      " [ 0 69 44 72 60  1 44 24 55 72]]\n",
+      " [[26 44 30 17 63  9 40 64 35 45]\n",
+      " [64 51 56 14 64 25 30 19 63  9]\n",
+      " [19 10 64 53 44  9 64 14 69 11]\n",
+      " [28 30 40 40  9 25 49 64 36 40]\n",
+      " [40 64 19 69  3  9 64 30 51  3]\n",
+      " [64 63  9 19 56 40 56 60 66 66]\n",
+      " [64 41 51  3 64 51 56 63 69 62]\n",
+      " [72 56 14 51 64 30 25 14 30 13]\n",
+      " [56 40 19 63 64 56 11 64 30 25]\n",
+      " [28 63  9 64 14 44  9 51 49 64]]\n",
       "\n",
       "y\n",
-      " [[ 1 51 22 69 44  8 72 57 52 52]\n",
-      " [24 35 60 72 43 51 36 69 44 67]\n",
-      " [25 72 14  1 44 72 60 62 70 44]\n",
-      " [51  8  8 44 43 55 72 78  8 62]\n",
-      " [72 36 62 67 44 72 51 24 67 72]\n",
-      " [69 44 36 35  8 35 38 56 56 24]\n",
-      " [41 24 67 72 24 35 69 62 31 62]\n",
-      " [35 60 24 72 51 43 60 51 13 36]\n",
-      " [ 8 36 69 72 35 70 72 51 43 43]\n",
-      " [69 44 72 60  1 44 24 55 72 35]]\n"
+      " [[44 30 17 63  9 40 64 35 45 45]\n",
+      " [51 56 14 64 25 30 19 63  9  3]\n",
+      " [10 64 53 44  9 64 14 69 11  9]\n",
+      " [30 40 40  9 25 49 64 36 40 69]\n",
+      " [64 19 69  3  9 64 30 51  3 64]\n",
+      " [63  9 19 56 40 56 60 66 66 51]\n",
+      " [41 51  3 64 51 56 63 69 62 69]\n",
+      " [56 14 51 64 30 25 14 30 13 19]\n",
+      " [40 19 63 64 56 11 64 30 25 25]\n",
+      " [63  9 64 14 44  9 51 49 64 56]]\n"
      ]
     }
    ],
@@ -651,9 +649,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training on GPU!\n"
+     ]
+    }
+   ],
    "source": [
     "# check if GPU is available\n",
     "train_on_gpu = torch.cuda.is_available()\n",
@@ -665,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -684,17 +690,35 @@
     "        self.int2char = dict(enumerate(self.chars))\n",
     "        self.char2int = {ch: ii for ii, ch in self.int2char.items()}\n",
     "        \n",
+    "        self.input_size = len(self.chars)\n",
+    "        \n",
     "        ## TODO: define the layers of the model\n",
-    "      \n",
+    "        self.lstm = nn.LSTM(input_size = self.input_size,\n",
+    "                            hidden_size = n_hidden,\n",
+    "                            num_layers= self.n_layers,\n",
+    "                            batch_first = True,\n",
+    "                            dropout = 0.05,\n",
+    "                            bidirectional = False )\n",
+    "        \n",
+    "        self.output = nn.Linear(in_features = n_hidden, out_features = self.input_size)\n",
+    "        \n",
+    "        self.drop_out = nn.Dropout(self.drop_prob)\n",
     "    \n",
     "    def forward(self, x, hidden):\n",
     "        ''' Forward pass through the network. \n",
     "            These inputs are x, and the hidden/cell state `hidden`. '''\n",
-    "                \n",
+    "        \n",
     "        ## TODO: Get the outputs and the new hidden state from the lstm\n",
+    "        lstm_output, hidden = self.lstm(x, hidden)\n",
+    "        \n",
+    "        lstm_output = self.drop_out(lstm_output)\n",
+    "        \n",
+    "        lstm_output = output.contiguous().view(-1, self.n_hidden)\n",
+    "        \n",
+    "        output = self.output(lstm_output)\n",
     "        \n",
     "        # return the final output and the hidden state\n",
-    "        return out, hidden\n",
+    "        return output, hidden_ii\n",
     "    \n",
     "    \n",
     "    def init_hidden(self, batch_size):\n",
@@ -731,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -840,14 +864,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CharRNN(\n",
+      "  (lstm): LSTM(83, 128, num_layers=2, batch_first=True, dropout=0.05)\n",
+      "  (output): Linear(in_features=128, out_features=83, bias=True)\n",
+      "  (drop_out): Dropout(p=0.5)\n",
+      ")\n"
+     ]
+    }
+   ],
    "source": [
     "## TODO: set you model hyperparameters\n",
     "# define and print the net\n",
-    "n_hidden=\n",
-    "n_layers=\n",
+    "n_hidden = 256\n",
+    "n_layers = 2\n",
     "\n",
     "net = CharRNN(chars, n_hidden, n_layers)\n",
     "print(net)"
