feat: Implement character level LSTM
Implement train method to train model on given dataset.

--- a/recurrent-neural-networks/char-rnn/Character_Level_RNN_Exercise.ipynb
+++ b/recurrent-neural-networks/char-rnn/Character_Level_RNN_Exercise.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 401,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 402,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 403,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 404,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 405,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
        "'Chapter 1\\n\\n\\nHappy families are all alike; every unhappy family is unhappy in its own\\nway.\\n\\nEverythin'"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 405,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,98 +109,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 406,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{';': 0,\n",
-       " 'O': 1,\n",
-       " 'j': 2,\n",
-       " 'd': 3,\n",
-       " '@': 4,\n",
-       " '3': 5,\n",
-       " '\"': 6,\n",
-       " 'L': 7,\n",
-       " 'M': 8,\n",
-       " 'e': 9,\n",
-       " '.': 10,\n",
-       " 'f': 11,\n",
-       " 'q': 12,\n",
-       " 'y': 13,\n",
-       " 'w': 14,\n",
-       " 'B': 15,\n",
-       " '$': 16,\n",
-       " 'p': 17,\n",
-       " 'Z': 18,\n",
-       " 's': 19,\n",
-       " '2': 20,\n",
-       " '(': 21,\n",
-       " '8': 22,\n",
-       " '5': 23,\n",
-       " 'X': 24,\n",
-       " 'l': 25,\n",
-       " 'C': 26,\n",
-       " 'D': 27,\n",
-       " 'u': 28,\n",
-       " ')': 29,\n",
-       " 'a': 30,\n",
-       " 'H': 31,\n",
-       " '0': 32,\n",
-       " 'G': 33,\n",
-       " 'J': 34,\n",
-       " '1': 35,\n",
-       " 'P': 36,\n",
-       " '6': 37,\n",
-       " '&': 38,\n",
-       " 'F': 39,\n",
-       " 'r': 40,\n",
-       " 'A': 41,\n",
-       " '%': 42,\n",
-       " ':': 43,\n",
-       " 'h': 44,\n",
-       " '\\n': 45,\n",
-       " 'V': 46,\n",
-       " 'z': 47,\n",
-       " 'Q': 48,\n",
-       " ',': 49,\n",
-       " '*': 50,\n",
-       " 'n': 51,\n",
-       " 'b': 52,\n",
-       " 'T': 53,\n",
-       " 'R': 54,\n",
-       " '7': 55,\n",
-       " 'o': 56,\n",
-       " \"'\": 57,\n",
-       " 'm': 58,\n",
-       " 'N': 59,\n",
-       " '_': 60,\n",
-       " 'U': 61,\n",
-       " 'c': 62,\n",
-       " 't': 63,\n",
-       " ' ': 64,\n",
-       " 'k': 65,\n",
-       " '-': 66,\n",
-       " 'S': 67,\n",
-       " '`': 68,\n",
-       " 'i': 69,\n",
-       " '!': 70,\n",
-       " 'x': 71,\n",
-       " 'g': 72,\n",
-       " 'Y': 73,\n",
-       " 'W': 74,\n",
-       " 'K': 75,\n",
-       " '/': 76,\n",
-       " '4': 77,\n",
-       " '?': 78,\n",
-       " 'v': 79,\n",
-       " '9': 80,\n",
-       " 'E': 81,\n",
-       " 'I': 82}"
+       "{'8': 0,\n",
+       " 'v': 1,\n",
+       " 'J': 2,\n",
+       " 'b': 3,\n",
+       " 'n': 4,\n",
+       " 't': 5,\n",
+       " 'A': 6,\n",
+       " '0': 7,\n",
+       " '1': 8,\n",
+       " 'N': 9,\n",
+       " 'q': 10,\n",
+       " 'Y': 11,\n",
+       " 'G': 12,\n",
+       " 'Q': 13,\n",
+       " '*': 14,\n",
+       " ';': 15,\n",
+       " 'p': 16,\n",
+       " 'M': 17,\n",
+       " '-': 18,\n",
+       " 'V': 19,\n",
+       " '/': 20,\n",
+       " 'C': 21,\n",
+       " 'o': 22,\n",
+       " ')': 23,\n",
+       " 'r': 24,\n",
+       " 'c': 25,\n",
+       " 'B': 26,\n",
+       " 'T': 27,\n",
+       " 'R': 28,\n",
+       " ' ': 29,\n",
+       " ',': 30,\n",
+       " '5': 31,\n",
+       " 'j': 32,\n",
+       " ':': 33,\n",
+       " 'W': 34,\n",
+       " 'k': 35,\n",
+       " '2': 36,\n",
+       " 'E': 37,\n",
+       " '%': 38,\n",
+       " '9': 39,\n",
+       " 'g': 40,\n",
+       " 's': 41,\n",
+       " \"'\": 42,\n",
+       " '\\n': 43,\n",
+       " 'm': 44,\n",
+       " 'S': 45,\n",
+       " 'D': 46,\n",
+       " 'f': 47,\n",
+       " '6': 48,\n",
+       " 'y': 49,\n",
+       " 'l': 50,\n",
+       " 'w': 51,\n",
+       " 'd': 52,\n",
+       " '4': 53,\n",
+       " '.': 54,\n",
+       " 'X': 55,\n",
+       " 'e': 56,\n",
+       " 'i': 57,\n",
+       " 'z': 58,\n",
+       " 'a': 59,\n",
+       " 'x': 60,\n",
+       " 'L': 61,\n",
+       " '7': 62,\n",
+       " 'H': 63,\n",
+       " '&': 64,\n",
+       " 'K': 65,\n",
+       " '(': 66,\n",
+       " '$': 67,\n",
+       " 'I': 68,\n",
+       " 'u': 69,\n",
+       " '`': 70,\n",
+       " 'F': 71,\n",
+       " '_': 72,\n",
+       " 'Z': 73,\n",
+       " 'O': 74,\n",
+       " '!': 75,\n",
+       " 'U': 76,\n",
+       " '@': 77,\n",
+       " '3': 78,\n",
+       " 'h': 79,\n",
+       " '?': 80,\n",
+       " 'P': 81,\n",
+       " '\"': 82}"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 406,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -210,7 +210,7 @@
        "(1985223,)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 406,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -243,21 +243,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 407,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([26, 44, 30, 17, 63,  9, 40, 64, 35, 45, 45, 45, 31, 30, 17, 17, 13,\n",
-       "       64, 11, 30, 58, 69, 25, 69,  9, 19, 64, 30, 40,  9, 64, 30, 25, 25,\n",
-       "       64, 30, 25, 69, 65,  9,  0, 64,  9, 79,  9, 40, 13, 64, 28, 51, 44,\n",
-       "       30, 17, 17, 13, 64, 11, 30, 58, 69, 25, 13, 64, 69, 19, 64, 28, 51,\n",
-       "       44, 30, 17, 17, 13, 64, 69, 51, 64, 69, 63, 19, 64, 56, 14, 51, 45,\n",
-       "       14, 30, 13, 10, 45, 45, 81, 79,  9, 40, 13, 63, 44, 69, 51])"
+       "array([21, 79, 59, 16,  5, 56, 24, 29,  8, 43, 43, 43, 63, 59, 16, 16, 49,\n",
+       "       29, 47, 59, 44, 57, 50, 57, 56, 41, 29, 59, 24, 56, 29, 59, 50, 50,\n",
+       "       29, 59, 50, 57, 35, 56, 15, 29, 56,  1, 56, 24, 49, 29, 69,  4, 79,\n",
+       "       59, 16, 16, 49, 29, 47, 59, 44, 57, 50, 49, 29, 57, 41, 29, 69,  4,\n",
+       "       79, 59, 16, 16, 49, 29, 57,  4, 29, 57,  5, 41, 29, 22, 51,  4, 43,\n",
+       "       51, 59, 49, 54, 43, 43, 37,  1, 56, 24, 49,  5, 79, 57,  4])"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 407,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 408,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 409,
    "metadata": {},
    "outputs": [
     {
@@ -310,7 +310,7 @@
        "       [0, 5, 0, 0, 0, 0, 0, 0]], dtype=int8)"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 409,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,26 +403,25 @@
     "    \n",
     "    ## TODO: Get the number of batches we can make\n",
     "    characters_in_one_batch = batch_size * seq_length\n",
-    "    n_batches = int(arr.shape[0]/ characters_in_one_batch)\n",
+    "    n_batches = len(arr)//characters_in_one_batch\n",
     "    \n",
     "    ## TODO: Keep only enough characters to make full batches\n",
     "    updated_arr_length = characters_in_one_batch * n_batches\n",
     "    arr = arr[:updated_arr_length]\n",
     "    \n",
     "    ## TODO: Reshape into batch_size rows\n",
-    "    arr = arr.reshape((n_batches, -1))\n",
-    "    print(arr.shape)\n",
+    "    arr = arr.reshape((batch_size, -1))\n",
     "    ## TODO: Iterate over the batches using a window of size seq_length\n",
     "    for n in range(0, arr.shape[1], seq_length):\n",
     "        # The features\n",
     "        x = arr[:, n:n + seq_length]\n",
     "        \n",
     "        # The targets, shifted by one\n",
-    "        y = np.ones_like(x)\n",
+    "        y = np.zeros_like(x)\n",
     "        try:\n",
-    "            y[:, :-1] = x[:, 1:]\n",
-    "        except:\n",
-    "            y[:, -1] = x[:, 0]\n",
+    "            y[:, :-1], y[:, -1] = x[:, 1:], arr[:, n + seq_length]\n",
+    "        except IndexError:\n",
+    "            y[:, :-1], y[:, -1] = x[:, 1:], arr[:, 0]\n",
     "\n",
     "        yield x, y"
    ]
@@ -436,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +446,7 @@
        "       [11, 12, 13, 14, 15]])"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 412,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -459,7 +458,7 @@
        "       [12, 13, 14, 15, 11]])"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 412,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,33 +485,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(4963, 400)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "(4963, 50)"
+       "(8, 50)"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 413,
      "metadata": {},
      "output_type": "execute_result"
     },
     {
      "data": {
       "text/plain": [
-       "(4963, 50)"
+       "(8, 50)"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 413,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -526,7 +518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -534,28 +526,24 @@
      "output_type": "stream",
      "text": [
       "x\n",
-      " [[26 44 30 17 63  9 40 64 35 45]\n",
-      " [64 51 56 14 64 25 30 19 63  9]\n",
-      " [19 10 64 53 44  9 64 14 69 11]\n",
-      " [28 30 40 40  9 25 49 64 36 40]\n",
-      " [40 64 19 69  3  9 64 30 51  3]\n",
-      " [64 63  9 19 56 40 56 60 66 66]\n",
-      " [64 41 51  3 64 51 56 63 69 62]\n",
-      " [72 56 14 51 64 30 25 14 30 13]\n",
-      " [56 40 19 63 64 56 11 64 30 25]\n",
-      " [28 63  9 64 14 44  9 51 49 64]]\n",
+      " [[21 79 59 16  5 56 24 29  8 43]\n",
+      " [41 22  4 29  5 79 59  5 29 59]\n",
+      " [56  4 52 29 22 24 29 59 29 47]\n",
+      " [41 29  5 79 56 29 25 79 57 56]\n",
+      " [29 41 59 51 29 79 56 24 29  5]\n",
+      " [25 69 41 41 57 22  4 29 59  4]\n",
+      " [29  6  4  4 59 29 79 59 52 29]\n",
+      " [74  3 50 22  4 41 35 49 54 29]]\n",
       "\n",
       "y\n",
-      " [[44 30 17 63  9 40 64 35 45 45]\n",
-      " [51 56 14 64 25 30 19 63  9  3]\n",
-      " [10 64 53 44  9 64 14 69 11  9]\n",
-      " [30 40 40  9 25 49 64 36 40 69]\n",
-      " [64 19 69  3  9 64 30 51  3 64]\n",
-      " [63  9 19 56 40 56 60 66 66 51]\n",
-      " [41 51  3 64 51 56 63 69 62 69]\n",
-      " [56 14 51 64 30 25 14 30 13 19]\n",
-      " [40 19 63 64 56 11 64 30 25 25]\n",
-      " [63  9 64 14 44  9 51 49 64 56]]\n"
+      " [[79 59 16  5 56 24 29  8 43 43]\n",
+      " [22  4 29  5 79 59  5 29 59  5]\n",
+      " [ 4 52 29 22 24 29 59 29 47 22]\n",
+      " [29  5 79 56 29 25 79 57 56 47]\n",
+      " [41 59 51 29 79 56 24 29  5 56]\n",
+      " [69 41 41 57 22  4 29 59  4 52]\n",
+      " [ 6  4  4 59 29 79 59 52 29 41]\n",
+      " [ 3 50 22  4 41 35 49 54 29 82]]\n"
      ]
     }
    ],
@@ -649,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -671,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -709,16 +697,17 @@
     "            These inputs are x, and the hidden/cell state `hidden`. '''\n",
     "        \n",
     "        ## TODO: Get the outputs and the new hidden state from the lstm\n",
+    "        #print('input_shape : {} | hidden_shape : {}'.format(x.shape, hidden.shape))\n",
     "        lstm_output, hidden = self.lstm(x, hidden)\n",
-    "        \n",
+    "        #print('output_shape : {} | up_hidden_shape : {}'.format(lstm_output.shape, hidden.shape))\n",
     "        lstm_output = self.drop_out(lstm_output)\n",
     "        \n",
-    "        lstm_output = output.contiguous().view(-1, self.n_hidden)\n",
+    "        lstm_output_mod = lstm_output.contiguous().view(-1, self.n_hidden)\n",
     "        \n",
-    "        output = self.output(lstm_output)\n",
+    "        output = self.output(lstm_output_mod)\n",
     "        \n",
     "        # return the final output and the hidden state\n",
-    "        return output, hidden_ii\n",
+    "        return output, hidden\n",
     "    \n",
     "    \n",
     "    def init_hidden(self, batch_size):\n",
@@ -755,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,10 +782,8 @@
     "    for e in range(epochs):\n",
     "        # initialize hidden state\n",
     "        h = net.init_hidden(batch_size)\n",
-    "        \n",
     "        for x, y in get_batches(data, batch_size, seq_length):\n",
     "            counter += 1\n",
-    "            \n",
     "            # One-hot encode our data and make them Torch tensors\n",
     "            x = one_hot_encode(x, n_chars)\n",
     "            inputs, targets = torch.from_numpy(x), torch.from_numpy(y)\n",
@@ -815,7 +802,7 @@
     "            output, h = net(inputs, h)\n",
     "            \n",
     "            # calculate the loss and perform backprop\n",
-    "            loss = criterion(output, targets.view(batch_size*seq_length))\n",
+    "            loss = criterion(output, targets.view(batch_size*seq_length).long())\n",
     "            loss.backward()\n",
     "            # `clip_grad_norm` helps prevent the exploding gradient problem in RNNs / LSTMs.\n",
     "            nn.utils.clip_grad_norm_(net.parameters(), clip)\n",
@@ -841,7 +828,7 @@
     "                        inputs, targets = inputs.cuda(), targets.cuda()\n",
     "\n",
     "                    output, val_h = net(inputs, val_h)\n",
-    "                    val_loss = criterion(output, targets.view(batch_size*seq_length))\n",
+    "                    val_loss = criterion(output, targets.view(batch_size*seq_length).long())\n",
     "                \n",
     "                    val_losses.append(val_loss.item())\n",
     "                \n",
@@ -864,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -872,8 +859,8 @@
      "output_type": "stream",
      "text": [
       "CharRNN(\n",
-      "  (lstm): LSTM(83, 128, num_layers=2, batch_first=True, dropout=0.05)\n",
-      "  (output): Linear(in_features=128, out_features=83, bias=True)\n",
+      "  (lstm): LSTM(83, 512, num_layers=2, batch_first=True, dropout=0.05)\n",
+      "  (output): Linear(in_features=512, out_features=83, bias=True)\n",
       "  (drop_out): Dropout(p=0.5)\n",
       ")\n"
      ]
@@ -882,7 +869,7 @@
    "source": [
     "## TODO: set you model hyperparameters\n",
     "# define and print the net\n",
-    "n_hidden = 256\n",
+    "n_hidden = 512\n",
     "n_layers = 2\n",
     "\n",
     "net = CharRNN(chars, n_hidden, n_layers)\n",
@@ -902,15 +889,54 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch: 1/3... Step: 15... Loss: 3.1802... Val Loss: 3.1397\n",
+      "Epoch: 1/3... Step: 30... Loss: 3.1391... Val Loss: 3.1219\n",
+      "Epoch: 1/3... Step: 45... Loss: 3.1243... Val Loss: 3.1175\n",
+      "Epoch: 1/3... Step: 60... Loss: 3.1147... Val Loss: 3.1136\n",
+      "Epoch: 1/3... Step: 75... Loss: 3.1003... Val Loss: 3.1042\n",
+      "Epoch: 1/3... Step: 90... Loss: 3.0921... Val Loss: 3.0764\n",
+      "Epoch: 1/3... Step: 105... Loss: 2.9846... Val Loss: 2.9713\n",
+      "Epoch: 1/3... Step: 120... Loss: 2.8327... Val Loss: 2.8361\n",
+      "Epoch: 1/3... Step: 135... Loss: 2.7230... Val Loss: 2.6813\n",
+      "Epoch: 2/3... Step: 150... Loss: 2.5938... Val Loss: 2.5618\n",
+      "Epoch: 2/3... Step: 165... Loss: 2.5324... Val Loss: 2.5253\n",
+      "Epoch: 2/3... Step: 180... Loss: 2.4538... Val Loss: 2.4531\n",
+      "Epoch: 2/3... Step: 195... Loss: 2.4175... Val Loss: 2.4050\n",
+      "Epoch: 2/3... Step: 210... Loss: 2.3755... Val Loss: 2.3711\n",
+      "Epoch: 2/3... Step: 225... Loss: 2.3316... Val Loss: 2.3279\n",
+      "Epoch: 2/3... Step: 240... Loss: 2.3057... Val Loss: 2.2933\n",
+      "Epoch: 2/3... Step: 255... Loss: 2.2718... Val Loss: 2.2510\n",
+      "Epoch: 2/3... Step: 270... Loss: 2.2201... Val Loss: 2.2140\n",
+      "Epoch: 3/3... Step: 285... Loss: 2.1698... Val Loss: 2.1803\n",
+      "Epoch: 3/3... Step: 300... Loss: 2.1515... Val Loss: 2.1406\n",
+      "Epoch: 3/3... Step: 315... Loss: 2.1401... Val Loss: 2.1174\n",
+      "Epoch: 3/3... Step: 330... Loss: 2.0669... Val Loss: 2.0847\n",
+      "Epoch: 3/3... Step: 345... Loss: 2.0433... Val Loss: 2.0601\n",
+      "Epoch: 3/3... Step: 360... Loss: 1.9949... Val Loss: 2.0267\n"
+     ]
+    }
+   ],
    "source": [
-    "batch_size = \n",
-    "seq_length = \n",
-    "n_epochs =  # start small if you are just testing initial behavior\n",
+    "batch_size = 128\n",
+    "seq_length = 100\n",
+    "# start small if you are just testing initial behavior\n",
+    "n_epochs =  3\n",
     "\n",
     "# train the model\n",
-    "train(net, encoded, epochs=n_epochs, batch_size=batch_size, seq_length=seq_length, lr=0.001, print_every=10)"
+    "train(net, encoded, epochs=n_epochs, batch_size=batch_size, seq_length=seq_length, lr=0.001, print_every=15)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
