--- a/word2vec-embeddings/Skip_Grams_Solution.ipynb
+++ b/word2vec-embeddings/Skip_Grams_Solution.ipynb
@@ -207,14 +207,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[5233, 3080, 58, 741, 10571, 27349, 15067, 58112, 3580, 190, 10712, 6, 104, 2731, 3672, 708, 53, 7088, 5233, 1052, 44611, 2877, 5233, 8983, 4147, 6437, 4186, 362, 344, 1818]\n"
+      "4629049\n",
+      "[5233, 3133, 476, 10571, 27349, 15067, 58112, 3580, 10712, 1324, 454, 6, 3672, 40, 36, 1423, 7088, 5233, 1052, 44611, 2877, 5233, 1134, 2621, 8983, 6437, 153, 1137, 4860, 6753]\n"
      ]
     }
    ],
@@ -234,6 +235,7 @@
     "# create a new list of words for training\n",
     "train_words = [word for word in int_words if random.random() < (1 - p_drop[word])]\n",
     "\n",
+    "print(len(train_words))\n",
     "print(train_words[:30])"
    ]
   },
@@ -2166,7 +2168,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2180,7 +2182,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
