--- a/word2vec-embeddings/Negative_Sampling_Exercise.ipynb
+++ b/word2vec-embeddings/Negative_Sampling_Exercise.ipynb
@@ -493,20 +493,27 @@
     "        self.noise_dist = noise_dist\n",
     "        \n",
     "        # define embedding layers for input and output words\n",
-    "        self.in_embed = \n",
-    "        self.out_embed = \n",
+    "        self.in_embed = nn.Embedding(self.n_vocab, self.n_embed)\n",
+    "        self.out_embed = nn.Embedding(self.n_vocab, self.n_embed)\n",
     "        \n",
     "        # Initialize both embedding tables with uniform distribution\n",
+    "        self.in_embed.weight.data.uniform_(-1, 1)\n",
+    "        self.out_embed.weight.data.uniform_(-1, 1)\n",
+    "\n",
     "        \n",
     "    def forward_input(self, input_words):\n",
     "        # return input vector embeddings\n",
+    "        in_embed = self.in_embed(input_words)\n",
+    "        \n",
+    "        return in_embed\n",
     "\n",
-    "        return None\n",
-    "    \n",
+    "\n",
     "    def forward_output(self, output_words):\n",
     "        # return output vector embeddings\n",
+    "        out_embed = self.out_embed(output_words)\n",
+    "        \n",
+    "        return out_embed\n",
     "\n",
-    "        return None\n",
     "    \n",
     "    def forward_noise(self, batch_size, n_samples):\n",
     "        \"\"\" Generate noise vectors with shape (batch_size, n_samples, n_embed)\"\"\"\n",
@@ -526,9 +533,9 @@
     "        \n",
     "        ## TODO: get the noise embeddings\n",
     "        # reshape the embeddings so that they have dims (batch_size, n_samples, n_embed)\n",
+    "        noise_words = self.out_embed(noise_words).view(batch_size, n_samples, self.n_embed)\n",
     "\n",
-    "        \n",
-    "        return None"
+    "        return noise_words"
    ]
   },
   {
