--- a/gan-mnist/MNIST_GAN_Exercise.ipynb
+++ b/gan-mnist/MNIST_GAN_Exercise.ipynb
@@ -129,28 +129,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import torch.nn as nn\n",
-    "import torch.nn.functional as F\n",
-    "\n",
+    "import torch.nn.functional as F"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "class Discriminator(nn.Module):\n",
     "\n",
     "    def __init__(self, input_size, hidden_dim, output_size):\n",
     "        super(Discriminator, self).__init__()\n",
     "        \n",
     "        # define all layers\n",
-    "        \n",
+    "        self.disc_hidden_0 = nn.Sequential(\n",
+    "                            nn.Linear(input_size, hidden_dim*8),\n",
+    "                            nn.LeakyReLU(negative_slope = 0.01),\n",
+    "                            nn.Dropout(p = 0.2)\n",
+    "                        )\n",
+    "\n",
+    "        self.disc_hidden_1 = nn.Sequential(\n",
+    "                            nn.Linear(hidden_dim*8, hidden_dim*4),\n",
+    "                            nn.LeakyReLU(negative_slope = 0.01),\n",
+    "                            nn.Dropout(p = 0.2)\n",
+    "                        )\n",
+    "\n",
+    "        self.disc_output = nn.Sequential(\n",
+    "                            nn.Linear(hidden_dim*4, output_size)\n",
+    "                        )\n",
+    "\n",
     "        \n",
     "    def forward(self, x):\n",
     "        # flatten image\n",
+    "        x = x.view(-1, 28 * 28)\n",
     "        \n",
     "        # pass x through all layers\n",
     "        # apply leaky relu activation to all hidden layers\n",
+    "        x = self.disc_hidden_0(x)\n",
+    "        x = self.disc_hidden_1(x)\n",
+    "        x = self.disc_output(x)\n",
     "\n",
-    "        return x\n"
+    "        return x"
    ]
   },
   {
@@ -601,7 +627,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
