feat: Implement CycleGAN
Develop loss function for CycleGAN x_Y and Y_X. In addition to it, develop loss function for
descriminator.

--- a/cycle-gan/CycleGAN_Exercise.ipynb
+++ b/cycle-gan/CycleGAN_Exercise.ipynb
@@ -772,17 +772,20 @@
    "outputs": [],
    "source": [
     "def real_mse_loss(D_out):\n",
-    "    # how close is the produced output from being \"real\"?\n",
+    "    return torch.mean((D_out - 1)**2)\n",
     "    \n",
     "\n",
     "def fake_mse_loss(D_out):\n",
     "    # how close is the produced output from being \"false\"?\n",
+    "    return torch.mean((D_out)**2)\n",
     "    \n",
     "\n",
     "def cycle_consistency_loss(real_im, reconstructed_im, lambda_weight):\n",
     "    # calculate reconstruction loss \n",
     "    # return weighted loss\n",
-    "    \n"
+    "    reconstruction_loss = torch.mean(real_im - reconstructed_im)\n",
+    "    \n",
+    "    return reconstruction_loss * lambda_weight"
    ]
   },
   {
@@ -805,9 +808,9 @@
     "import torch.optim as optim\n",
     "\n",
     "# hyperparams for Adam optimizers\n",
-    "lr=\n",
-    "beta1=\n",
-    "beta2= \n",
+    "lr=0.0002\n",
+    "beta1=0.5\n",
+    "beta2=0.99\n",
     "\n",
     "g_params = list(G_XtoY.parameters()) + list(G_YtoX.parameters())  # Get generator parameters\n",
     "\n",
