--- a/dcgan-svhn/DCGAN_Exercise.ipynb
+++ b/dcgan-svhn/DCGAN_Exercise.ipynb
@@ -290,14 +290,31 @@
     "        super(Generator, self).__init__()\n",
     "\n",
     "        # complete init function\n",
+    "        self.linear_input = nn.Linear(in_features=z_size, out_features=128 * 4 * 4)\n",
     "        \n",
+    "        self.hidden_0 = deconv(in_channels = 128, out_channels=64, kernel_size=4, stride=2, padding=1, batch_norm=True)\n",
+    "        \n",
+    "        self.hidden_1 = deconv(in_channels = 64, out_channels=32, kernel_size=4, stride=2, padding=1, batch_norm=True)\n",
+    "        \n",
+    "        self.hidden_2 = deconv(in_channels = 64, out_channels=3, kernel_size=4, stride=2, padding=1, batch_norm=False)\n",
+    "        \n",
+    "        self.activation_relu = nn.ReLU()\n",
+    "        \n",
+    "        self.activation_tanh = nn.Tanh()\n",
     "        \n",
     "\n",
     "    def forward(self, x):\n",
     "        # complete forward function\n",
+    "        x = self.linear_input(x)\n",
     "        \n",
-    "        return x\n",
-    "    "
+    "        x = x.view(-1, 4, 4)\n",
+    "        \n",
+    "        x = self.activation_relu(self.hidden_0(x))\n",
+    "        x = self.activation_relu(self.hidden_1(x))\n",
+    "        \n",
+    "        x = self.activation_tanh(self.hidden_2(x))\n",
+    "        \n",
+    "        return x    "
    ]
   },
   {
@@ -671,7 +688,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
